# vortex2d

./: .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  README_next.md  RELEASING.md  ROADMAP.md  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  ci_hardening.yml  docs.yml  publish.yml  release-please.yml
benchmarks/: test_bench_velocities.py
conda/recipe/: meta.yaml
docs/: index.md  requirements.txt
docs/api/: api.md  plotly_viz.md  plotting.md  vortex2d.md  vortexsystem.md
docs/guides/: animation_export.md  dipole.md  periodic_bcs.md  quickstart_lamb_oseen.md
docs/theory/: diffusion_core_spreading_vs_pse.md  gaussian_core_biot_savart.md  primer.md
docs/tutorials/: dipole.md
examples/: dipole_animation.py  dipole_snapshot.py
scripts/: make_validation_plots.py  mem_profile.py
src/vortex2d/: __init__.py  api.py  plotly_viz.py  seeders.py  vortex2d.py
tests/: test_bench_small.py  test_core.py  test_dipole_speed.py  test_kelvin_conservation.py  test_temporal_order_tracers.py  test_validation_l2_over_time.py  test_validation_lamb_oseen.py
